# anatomy-ner

./: .gitignore
annotation_interface/: app.py  config.yaml  pyproject.toml
annotation_interface/static/: main.js  styles.css
annotation_interface/templates/: index.html
data/: eval_dataset.csv  eval_dataset_annotated.csv  eval_dataset_annotated_tabdl.txt  longest_reports.txt  longest_reports_paths.txt
src/analyses/: classifier_comparison.ipynb  llm_model_comparison.ipynb
src/archive/: preprocess_eval_dataset.ipynb
src/scripts/: compile_eval_dataset.py  find_longest_reports.sh
